fix: overflow.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,5 +43,5 @@ body {
   color: var(--foreground);
   font-family: var(--font-special-gothic-condensed-one), Arial, Helvetica, sans-serif;
   overscroll-behavior: none;
-  overflow: hidden;
+  overflow-x: none;
 }
